# starboard

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  gresource.xml  starboard.service
resources/: gresource.gresource  help.txt
src/: client.rs  error.rs  ipc.rs  main.rs  packets.rs  server.rs  server_old.rs  systemd.rs  test.rs  ui.rs  util.rs
src/c/: resources.c  resources.c.save
src/gtk/: layout.ui  style.css
