[package]
name = "starboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.42"
evdev = { version = "0.13.2", features = ["tokio", "stream-trait"] }
ipnet = "2.11.0"
json = "0.12.4"
libc = "0.2.175"
local-ip-addr = "0.1.1"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
