[package]
name = "starboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "2.0.1"
chrono = "0.4.42"
daemonize = "0.5.0"
evdev = { version = "0.13.2", features = ["tokio", "stream-trait"] }
gio = "0.21.5"
gtk4 = { version = "0.10.3", features = ["v4_12"] }
ipnet = "2.11.0"
json = "0.12.4"
local-ip-addr = "0.1.1"
nix = { version = "0.30.1", features = ["user"] }
sdl2 = "0.38.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
cargo = "0.93.0"
cc = "1.2.49"
pkg-config = "0.3.32"
